RESOLVED FIXED275508
Fix a specific crash where a WebPageProxy outlives its PageClient
https://bugs.webkit.org/show_bug.cgi?id=275508
Summary Fix a specific crash where a WebPageProxy outlives its PageClient
Brady Eidson
Reported 2024-06-14 12:33:48 PDT
Fix a specific crash where a WebPageProxy outlives its PageClient
Attachments
Brady Eidson
Comment 1 2024-06-14 12:33:51 PDT
EWS
Comment 2 2024-06-18 12:36:32 PDT
Committed 280131@main (927f3f7dfde6): <https://commits.webkit.org/280131@main> Reviewed commits have been landed. Closing PR #29840 and removing active labels.
Sam Sneddon [:gsnedders]
Comment 3 2024-06-27 16:15:55 PDT
*** Bug 275957 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.